fix overflow error

--- a/tumblr-client.css
+++ b/tumblr-client.css
@@ -16,21 +16,19 @@ html,body {
 }
 
 #left-pane {
-	flex: 1 1 auto;
-	min-width: 100px;
-//	background-color: #ff0000;
+	flex: 0 0 auto;
+	min-width: 200px;
 	resize: horizontal;
 }
 
 #right-pane {
-	flex: 6 6 auto;
+	flex: 1 1 auto;
 	border-left: 2px solid #000000;
-//	background-color: #00ff00;
 }
 
 
 .v-scroll {
-	overflow: auto scroll;
+	overflow-y: scroll;
 }
 
 .content-parcel {
